// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete reducer should handle SYSTEM_STATUSES_FAILURE 1`] = `
Object {
  "loaderStatus": "ERROR",
  "services": Object {},
}
`;

exports[`AutoComplete reducer should handle success 1`] = `
Object {
  "loaderStatus": "RESOLVED",
  "services": Object {
    "candlepin": Object {
      "message": "a message",
      "status": "ok",
    },
    "candlepin_auth": Object {
      "message": "error message",
      "status": "error",
    },
    "foreman_tasks": Object {
      "status": "ok",
    },
    "pulp": Object {
      "status": "ok",
    },
    "pulp_auth": Object {
      "status": "ok",
    },
  },
}
`;

exports[`AutoComplete reducer should return PENDING 1`] = `
Object {
  "loaderStatus": "PENDING",
  "services": Object {},
}
`;

exports[`AutoComplete reducer should return the initial state 1`] = `
Object {
  "loaderStatus": "",
  "services": Object {},
}
`;
